--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			 <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+                <!-- Evita usar <release> en JDK 8 -->
+            </configuration>
+        </plugin>
 		</plugins>
 	</build>
 
