--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.datasource.password=pbf74c846763c948b6025aff3a36434490f5e3120bb052acea3c7
  
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-server.port=9090
+server.port=${PORT:8080}
