--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.datasource.password=p7b0ed36362d9460f4942d2de828fe65f70a63018af78cc82342f
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port=8080
+server.error.whitelabel.enabled=false
